# algokit-client-generator-ts

./: .editorconfig  .gitignore  .nsprc  .prettierignore  README.md  jest.config.ts  package-lock.json  package-lock.json.orig  package.json  package.json.orig  pyproject.toml  rollup.config.ts  tsconfig.build.json  tsconfig.json  tsconfig.non-strict.json
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: pr.yml  prod_release.yml  release.yml
docs/: usage.md  v4-migration.md
examples/: __main__.py  config.py
examples/arc56_test/: ARC56Test.arc56.json  application.json  arc56_test.algo.ts  client.generated.pn.ts  client.spec.ts  client.ts
examples/duplicate_structs/: application.json  client.ts  duplicate_structs.py
examples/helloworld/: application.json  client.spec.ts  client.ts  helloworld.py
examples/lifecycle/: application.json  client.spec.ts  client.ts  lifecycle.py
examples/minimal/: application.json  client.spec.ts  client.ts  minimal.py
examples/nested/: application.json  client.spec.ts  client.ts  nested.py
examples/nfd/: application.json  client.ts
examples/reti/: StakingPool.application.json  ValidatorRegistry.application.json  application.json  client.generated.pn.ts  client.spec.ts  client.ts  helpers.ts  staking.client.ts  validator.client.ts
examples/state/: application.json  client.spec.ts  client.ts  state.py
examples/voting/: application.json  client.spec.ts  (+2 more)
patches/: @bcherny+json-schema-ref-parser+10.0.5-fork.patch
scripts/: generate-clients.ts  update-approvals.ts
src/: cli.ts  index.ts
(+131 files in other folders)
